docs/scenes/versions/v57.0.0/ui/jetpack-compose.mdx
import { UIComponentCard, UIComponentGrid } from '~/ui/components/UIComponentGrid';

<UIComponentGrid section="jetpack-compose">
  <UIComponentCard
    title="AlertDialog"
    slug="alertdialog"
    description="用于显示原生警告对话框的 AlertDialog 组件。"
    src="/static/images/expo-ui/alertdialog/android-light.webp"
    darkSrc="/static/images/expo-ui/alertdialog/android-dark.webp"
  />
  <UIComponentCard
    title="Badge"
    slug="badge"
    description="用于显示状态指示器和计数的 Badge 组件。"
    src="/static/images/expo-ui/badge/android-light.webp"
    darkSrc="/static/images/expo-ui/badge/android-dark.webp"
  />
  <UIComponentCard
    title="BadgedBox"
    slug="badgedbox"
    description="用于在内容上叠加徽章的 BadgedBox 组件。"
    src="/static/images/expo-ui/badgedbox/android-light.webp"
    darkSrc="/static/images/expo-ui/badgedbox/android-dark.webp"
  />
  <UIComponentCard
    title="BasicAlertDialog"
    slug="basicalertdialog"
    description="用于显示自定义内容对话框的 BasicAlertDialog 组件。"
    src="/static/images/expo-ui/basicalertdialog/android-light.webp"
    darkSrc="/static/images/expo-ui/basicalertdialog/android-dark.webp"
  />
  <UIComponentCard
    title="Box"
    slug="box"
    description="用于堆叠子元素的 Box 组件。"
    src="/static/images/expo-ui/box/android-light.webp"
    darkSrc="/static/images/expo-ui/box/android-dark.webp"
  />
  <UIComponentCard
    title="Button"
    slug="button"
    description="用于显示原生 Material3 按钮的 Button 组件。"
    src="/static/images/expo-ui/button/android-light.webp"
    darkSrc="/static/images/expo-ui/button/android-dark.webp"
  />
  <UIComponentCard
    title="Card"
    slug="card"
    description="用于在样式化容器中显示内容的 Card 组件。"
    src="/static/images/expo-ui/card/android-light.webp"
    darkSrc="/static/images/expo-ui/card/android-dark.webp"
  />
  <UIComponentCard
    title="Carousel"
    slug="carousel"
    description="用于显示可滚动项目集合的 Carousel 组件。"
    src="/static/images/expo-ui/carousel/android-light.webp"
    darkSrc="/static/images/expo-ui/carousel/android-dark.webp"
  />
  <UIComponentCard
    title="Checkbox"
    slug="checkbox"
    description="用于选择控件的 Checkbox 组件。"
    src="/static/images/expo-ui/checkbox/android-light.webp"
    darkSrc="/static/images/expo-ui/checkbox/android-dark.webp"
  />
  <UIComponentCard
    title="Chip"
    slug="chip"
    description="用于显示紧凑元素的 Chip 组件。"
    src="/static/images/expo-ui/chip/android-light.webp"
    darkSrc="/static/images/expo-ui/chip/android-dark.webp"
  />
  <UIComponentCard
    title="Column"
    slug="column"
    description="用于垂直放置子元素的 Column 组件。"
    src="/static/images/expo-ui/column/android-light.webp"
    darkSrc="/static/images/expo-ui/column/android-dark.webp"
  />
  <UIComponentCard
    title="DateTimePicker"
    slug="datetimepicker"
    description="用于选择日期和时间的 DateTimePicker 组件。"
    src="/static/images/expo-ui/datetimepicker/android-light.webp"
    darkSrc="/static/images/expo-ui/datetimepicker/android-dark.webp"
  />
  <UIComponentCard
    title="Divider"
    slug="divider"
    description="用于创建视觉分隔线的 Divider 组件。"
    src="/static/images/expo-ui/divider/android-light.webp"
    darkSrc="/static/images/expo-ui/divider/android-dark.webp"
  />
  <UIComponentCard
    title="DockedSearchBar"
    slug="dockedsearchbar"
    description="用于显示内联搜索输入框的 DockedSearchBar 组件。"
    src="/static/images/expo-ui/dockedsearchbar/android-light.webp"
    darkSrc="/static/images/expo-ui/dockedsearchbar/android-dark.webp"
  />
  <UIComponentCard
    title="DropdownMenu"
    slug="dropdownmenu"
    description="用于显示下拉菜单的 DropdownMenu 组件。"
    src="/static/images/expo-ui/dropdownmenu/android-light.webp"
    darkSrc="/static/images/expo-ui/dropdownmenu/android-dark.webp"
  />
  <UIComponentCard
    title="ExposedDropdownMenuBox"
    slug="exposeddropdownmenubox"
    description="用于显示带有可自定义锚点的下拉菜单的 ExposedDropdownMenuBox 组件。"
    src="/static/images/expo-ui/exposeddropdownmenubox/android-light.webp"
    darkSrc="/static/images/expo-ui/exposeddropdownmenubox/android-dark.webp"
  />
  <UIComponentCard
    title="FloatingActionButton"
    slug="floatingactionbutton"
    description="遵循 Material Design 3 的 FloatingActionButton 组件。"
    src="/static/images/expo-ui/floatingactionbutton/android-light.webp"
    darkSrc="/static/images/expo-ui/floatingactionbutton/android-dark.webp"
  />
  <UIComponentCard
    title="FlowRow"
    slug="flowrow"
    description="用于水平换行显示子元素的 FlowRow 组件。"
    src="/static/images/expo-ui/flowrow/android-light.webp"
    darkSrc="/static/images/expo-ui/flowrow/android-dark.webp"
  />
  <UIComponentCard
    title="HorizontalFloatingToolbar"
    slug="horizontalfloatingtoolbar"
    description="用于显示浮动操作栏的 HorizontalFloatingToolbar 组件。"
    src="/static/images/expo-ui/horizontalfloatingtoolbar/android-light.webp"
    darkSrc="/static/images/expo-ui/horizontalfloatingtoolbar/android-dark.webp"
  />
  <UIComponentCard
    title="HorizontalPager"
    slug="horizontalpager"
    description="用于支持滑动页面的 HorizontalPager 组件。"
    src="/static/images/expo-ui/horizontalpager/android-light.webp"
    darkSrc="/static/images/expo-ui/horizontalpager/android-dark.webp"
  />
  <UIComponentCard
    title="Host"
    slug="host"
    description="用于桥接 React Native 和 Jetpack Compose 的 Host 组件。"
    placeholder="android"
  />
  <UIComponentCard
    title="Icon"
    slug="icon"
    description="用于显示图标的 Icon 组件。"
    src="/static/images/expo-ui/icon/android-light.webp"
    darkSrc="/static/images/expo-ui/icon/android-dark.webp"
  />
  <UIComponentCard
    title="IconButton"
    slug="iconbutton"
    description="用于显示原生 Material3 图标按钮的 IconButton 组件。"
    src="/static/images/expo-ui/iconbutton/android-light.webp"
    darkSrc="/static/images/expo-ui/iconbutton/android-dark.webp"
  />
  <UIComponentCard
    title="LazyColumn"
    slug="lazycolumn"
    description="用于显示可滚动列表的 LazyColumn 组件。"
    src="/static/images/expo-ui/lazycolumn/android-light.webp"
    darkSrc="/static/images/expo-ui/lazycolumn/android-dark.webp"
  />
  <UIComponentCard
    title="LazyRow"
    slug="lazyrow"
    description="用于显示水平滚动列表的 LazyRow 组件。"
    src="/static/images/expo-ui/lazyrow/android-light.webp"
    darkSrc="/static/images/expo-ui/lazyrow/android-dark.webp"
  />
  <UIComponentCard
    title="ListItem"
    slug="listitem"
    description="用于显示结构化列表条目的 ListItem 组件。"
    src="/static/images/expo-ui/listitem/android-light.webp"
    darkSrc="/static/images/expo-ui/listitem/android-dark.webp"
  />
  <UIComponentCard
    title="LoadingIndicator"
    slug="loadingindicator"
    description="用于显示加载状态的 LoadingIndicator 组件。"
    src="/static/images/expo-ui/loadingindicator/android-light.webp"
    darkSrc="/static/images/expo-ui/loadingindicator/android-dark.webp"
  />
  <UIComponentCard
    title="Material Colors"
    slug="colors"
    description="从 JavaScript 读取 Material 3 颜色调色板（包括 Material 3 Dynamic Colors）。"
    src="/static/images/expo-ui/colors/android-light.webp"
    darkSrc="/static/images/expo-ui/colors/android-dark.webp"
  />
  <UIComponentCard
    title="ModalBottomSheet"
    slug="bottomsheet"
    description="从屏幕底部呈现内容的 ModalBottomSheet 组件。"
    src="/static/images/expo-ui/bottomsheet/android-light.webp"
    darkSrc="/static/images/expo-ui/bottomsheet/android-dark.webp"
  />
  <UIComponentCard
    title="Modifiers"
    slug="modifiers"
    description="@expo/ui 组件的布局修饰符。"
    placeholder="android"
  />
  <UIComponentCard
    title="NavigationBar"
    slug="navigationbar"
    description="用于 Material 3 底部导航的 NavigationBar 组件。"
    src="/static/images/expo-ui/navigationbar/android-light.webp"
    darkSrc="/static/images/expo-ui/navigationbar/android-dark.webp"
  />
  <UIComponentCard
    title="Progress indicators"
    slug="progress"
    description="用于显示操作状态的进度指示器组件。"
    src="/static/images/expo-ui/progress/android-light.webp"
    darkSrc="/static/images/expo-ui/progress/android-dark.webp"
  />
  <UIComponentCard
    title="PullToRefreshBox"
    slug="pulltorefreshbox"
    description="用于下拉刷新交互的 PullToRefreshBox 组件。"
    src="/static/images/expo-ui/pulltorefreshbox/android-light.webp"
    darkSrc="/static/images/expo-ui/pulltorefreshbox/android-dark.webp"
  />
  <UIComponentCard
    title="RadioButton"
    slug="radiobutton"
    description="用于单选控件的 RadioButton 组件。"
    src="/static/images/expo-ui/radiobutton/android-light.webp"
    darkSrc="/static/images/expo-ui/radiobutton/android-dark.webp"
  />
  <UIComponentCard
    title="RNHostView"
    slug="rnhostview"
    description="用于在 Jetpack Compose 中嵌入 React Native 视图的组件。"
    placeholder="android"
  />
  <UIComponentCard
    title="Row"
    slug="row"
    description="用于水平放置子元素的 Row 组件。"
    src="/static/images/expo-ui/row/android-light.webp"
    darkSrc="/static/images/expo-ui/row/android-dark.webp"
  />
  <UIComponentCard
    title="SearchBar"
    slug="searchbar"
    description="用于搜索输入功能的 SearchBar 组件。"
    src="/static/images/expo-ui/searchbar/android-light.webp"
    darkSrc="/static/images/expo-ui/searchbar/android-dark.webp"
  />
  <UIComponentCard
    title="SegmentedButton"
    slug="segmentedbutton"
    description="用于单选或多选的 Segmented Button 组件。"
    src="/static/images/expo-ui/segmentedbutton/android-light.webp"
    darkSrc="/static/images/expo-ui/segmentedbutton/android-dark.webp"
  />
  <UIComponentCard
    title="Shape"
    slug="shape"
    description="用于绘制几何形状的 Shape 组件。"
    src="/static/images/expo-ui/shape/android-light.webp"
    darkSrc="/static/images/expo-ui/shape/android-dark.webp"
  />
  <UIComponentCard
    title="Slider"
    slug="slider"
    description="用于从范围中选择值的 Slider 组件。"
    src="/static/images/expo-ui/slider/android-light.webp"
    darkSrc="/static/images/expo-ui/slider/android-dark.webp"
  />
  <UIComponentCard
    title="Snackbar"
    slug="snackbar"
    description="显示在屏幕底部、用于提供反馈且不会打断用户的简短通知。"
    src="/static/images/expo-ui/snackbar/android-light.webp"
    darkSrc="/static/images/expo-ui/snackbar/android-dark.webp"
  />
  <UIComponentCard
    title="Spacer"
    slug="spacer"
    description="用于在元素之间添加弹性空间的 Spacer 组件。"
    src="/static/images/expo-ui/spacer/android-light.webp"
    darkSrc="/static/images/expo-ui/spacer/android-dark.webp"
  />
  <UIComponentCard
    title="Surface"
    slug="surface"
    description="用于样式化内容容器的 Surface 组件。"
    src="/static/images/expo-ui/surface/android-light.webp"
    darkSrc="/static/images/expo-ui/surface/android-dark.webp"
  />
  <UIComponentCard
    title="Switch"
    slug="switch"
    description="用于切换控件的 Switch 组件。"
    src="/static/images/expo-ui/switch/android-light.webp"
    darkSrc="/static/images/expo-ui/switch/android-dark.webp"
  />
  <UIComponentCard
    title="Text"
    slug="text"
    description="用于显示样式化文本的 Text 组件。"
    src="/static/images/expo-ui/text/android-light.webp"
    darkSrc="/static/images/expo-ui/text/android-dark.webp"
  />
  <UIComponentCard
    title="TextField"
    slug="textfield"
    description="用于原生 Material3 文本输入的 TextField 组件。"
    src="/static/images/expo-ui/textfield/android-light.webp"
    darkSrc="/static/images/expo-ui/textfield/android-dark.webp"
  />
  <UIComponentCard
    title="ToggleButton"
    slug="togglebutton"
    description="用于显示原生 Material3 切换按钮的 ToggleButton 组件。"
    src="/static/images/expo-ui/togglebutton/android-light.webp"
    darkSrc="/static/images/expo-ui/togglebutton/android-dark.webp"
  />
  <UIComponentCard
    title="Tooltip"
    slug="tooltip"
    description="用于在长按时显示上下文信息的 Tooltip 组件。"
    src="/static/images/expo-ui/tooltip/android-light.webp"
    darkSrc="/static/images/expo-ui/tooltip/android-dark.webp"
  />
  <UIComponentCard
    title="useNativeState"
    slug="usenativestate"
    description="一个在 JavaScript 和原生 Jetpack Compose 视图之间共享可观察状态的 React hook。"
    placeholder="hook"
  />
</UIComponentGrid>
